Input label left align fixed. .activeBtn class added to diplay button selected. Screen 01 title question empty mutation added. Screen 02 UI changes, mobile view, & button selection feature implemented. App.vue card body size 100% set.

--- a/MROWizardApplication/src/assets/styles/RequestWizard.css
+++ b/MROWizardApplication/src/assets/styles/RequestWizard.css
@@ -360,6 +360,7 @@ Vuetify internal classes */
   text-align: left !important;
   font-size: 14px;
   color: #000000;
+  width: 100%;
 }
 .titleSubQuestion{
   text-align: center;
@@ -386,6 +387,9 @@ Vuetify internal classes */
   font-size: 20px !important;
   font-weight: 600;
   color: #000000 !important;
+}
+.activeBtn{
+  background-color: #EBEEF3 !important;
 }
 .checkboxBorder {
   height: auto;
